--- a/site-enabled.conf
+++ b/site-enabled.conf
@@ -1,11 +1,8 @@
-# nginx_aioauth
+server {
 
-Add authentication at web server level with auth_request module (https://nginx.org/en/docs/http/ngx_http_auth_request_module.html) and aiohttp.
+    # [...]
 
-
-## Nginx configuration
-```
-
+  
     # Require authentication to access /protected_area
 
     location /protected_area {
@@ -29,6 +26,4 @@ Add authentication at web server level with auth_request module (https://nginx.o
     location /api {
         proxy_pass http://127.0.0.1:8080;
     }
-```
-
-  
+}
